force-app/main/default/objects/ServiceResourceSkill/fields/FEC_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái của skill
- Nếu Check thì hệ thống sẽ phân bổ Interaction thuộc skill đang thiết lập cho Agent. 
- Nếu Uncheck thì sẽ không phân bổ Interaction thuộc skill đang thiết lập cho Agent.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>