force-app/main/default/objects/ServiceResourceSkill/fields/FEC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>FEC_Capacity__c</fullName>
    <description>Số lượng interaction tối đa thuộc skill (hiện tại chỉ thiết lập sẵn 1 skill Ubank Email) có thể pending tại rổ cá nhân của User</description>
    <label>Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>