force-app/main/default/objects/ServiceResourceSkill/fields/FEC_Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>FEC_Skill_Level__c</fullName>
    <description>Cấp độ skill
User có thể nhập giá trị số nguyên từ 1~100</description>
    <label>FEC Skill Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>