force-app/main/default/objects/ServiceResourceSkill/fields/FEC_Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Skill_Name__c</fullName>
    <description>Tên skill</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Skill.MasterLabel , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Name</label>
    <type>Text</type>
</CustomField>