force-app/main/default/objects/ServiceResourceSkill/validationRules/FEC_Validation_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Validation_Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>FEC_Capacity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>FEC_Capacity__c</errorDisplayField>
    <errorMessage>Capacity must be greater than or equal to 1.</errorMessage>
</ValidationRule>