force-app/main/default/objects/ServiceResourceSkill/validationRules/FEC_Validation_Effective_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Validation_Effective_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>EffectiveEndDate &lt; EffectiveStartDate</errorConditionFormula>
    <errorDisplayField>EffectiveEndDate</errorDisplayField>
    <errorMessage>The End Date must be later than the Start Date.</errorMessage>
</ValidationRule>