force-app/main/default/objects/ServiceResourceSkill/validationRules/FEC_Validation_Effective_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Validation_Effective_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>EffectiveStartDate &lt; NOW()</errorConditionFormula>
    <errorDisplayField>EffectiveStartDate</errorDisplayField>
    <errorMessage>Start Date cannot be in the past.
Please select a current or future date/time.</errorMessage>
</ValidationRule>