force-app/main/default/objects/ServiceResourceSkill/validationRules/FEC_Validation_Skill_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Validation_Skill_Level</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
     FEC_Skill_Level__c  &lt; 1,
     FEC_Skill_Level__c  &gt; 100
)</errorConditionFormula>
    <errorDisplayField>FEC_Skill_Level__c</errorDisplayField>
    <errorMessage>Skill Level must be between 1 and 100</errorMessage>
</ValidationRule>